--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install mypy
+        run: pip install mypy lxml
       - name: Run mypy
         run: |
           mkdir -p reports/mypy
