Properly execute everything?

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           mkdir -p reports/pytest/html reports/pytest/xml
-          pytest --cov-config=setup.cfg --cov-branch --cov=src/ --cov-report=html:reports/pytest/html --cov-report=xml:reports/pytest/xml/coverage.xml --cov-report=term | tee pytest_output.txt
+          pytest --cov=src --cov-config=setup.cfg --cov-branch --cov-report=html:reports/pytest/html --cov-report=xml:reports/pytest/xml/coverage.xml --cov-report=term test | tee pytest_output.txt
       - name: Parse and upload coverage
         run: |
           chmod +x parse-pytest-coverage.sh
