--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install black
+        run: pip install -r requirements.txt
       - name: Run Black
         run: black --check src/
 
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install mypy lxml
+        run: pip install -r requirements.txt
       - name: Run mypy
         run: |
           mkdir -p reports/mypy
@@ -51,7 +51,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install pylint
+        run: pip install -r requirements.txt
       - name: Run pylint
         run: pylint src
 
@@ -66,7 +66,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install pytest pytest-cov
+        run: pip install -r requirements.txt
       - name: Run tests with coverage
         run: |
           mkdir -p reports/pytest/html reports/pytest/xml
