--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,9 @@ output = reports/pytest/xml/coverage.xml
 [options]
 environment = PYTHONPYCACHEPREFIX=build/
 [pylint.'MESSAGES CONTROL']
-disable = E1101, no-name-in-module, W0622, too-many-function-args,
-            C0301, C0114, C0115, W0613, R1705, C0116, R1723, W0612, C0116, W0511, C0103, R0917, E1123, E1120, W0621,
-            E0110, C0411, C0412, W0611, E0401, R0401
-# when a variable is accessed for a nonexistent member, cv2 not recognized
-# also `no-name-in-module` because pylint gives
-# false positives with protobuf messages
+disable = W0511, E0401, R0401
+max-positional-arguments = 7
+max-line-length = 120
 max-args = 15
 # Maximum number of arguments for function / method
 max-attributes = 22
