--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pillow==11.0.0
 pluggy==1.5.0
 pyparsing==3.2.0
 pytest==8.3.3
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 scikit-learn==1.5.2
 scipy==1.14.1
