--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
-[egg_info]
-egg_base = build/
 [coverage:html]
 directory = reports/pytest/html
 [coverage:xml]
 output = reports/pytest/xml/coverage.xml
-[options]
-environment = PYTHONPYCACHEPREFIX=build/
+[coverage:run]
+omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
-disable = W0511, E0401, R0401
+disable = W0511, E0401, E0203, W0201
+# W0511 - TODO comments
+# E0401 - Imports
 max-positional-arguments = 7
 max-line-length = 120
 max-args = 7
