--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,7 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: |
+          python3 -m pip install types-requests
           pip install -r requirements.txt
           pip install lxml
       - name: Run mypy
