--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,12 @@ output = reports/pytest/xml/coverage.xml
 omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
 disable = W0511, E0401, E0203, W0201
-max-positional-arguments = 7
+max-positional-arguments = 15
 max-line-length = 120
-max-args = 7
-max-attributes = 12
+max-args = 15
+max-attributes = 20
 min-similarity-lines = 7
+extension-pkg-allow-list=mpi4py.MPI
 [mypy]
 warn_unused_configs = True
 disallow_subclassing_any = True
