--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,11 @@ output = reports/pytest/xml/coverage.xml
 [coverage:run]
 omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
-disable = W0511, E0401, E0203, W0201
-max-positional-arguments = 8
+disable = W0511, E0401, E0203, W0201, E0611
+max-positional-arguments = 9
 max-line-length = 120
-max-args = 8
-max-attributes = 13
+max-args = 9
+max-attributes = 14
 min-similarity-lines = 7
 extension-pkg-allow-list=mpi4py.MPI
 [mypy]
