install mpi on pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          sudo apt install libopenmpi-dev
+          pip install -r requirements.txt
       - name: Run Black
         run: black --check src/
 
@@ -30,7 +32,6 @@ jobs:
           python-version: '3.11'
       - name: Install dependencies
         run: |
-          sudo apt install libopenmpi-dev
           python3 -m pip install types-requests
           pip install -r requirements.txt
           pip install lxml
