--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           sudo apt install libopenmpi-dev
           python3 -m pip install types-requests
+          python3 -m pip install types-Deprecated
           pip install -r requirements.txt
           pip install lxml
       - name: Run mypy
