--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,25 +3,8 @@ name: CI/CD Pipeline
 on: [push]
 
 jobs:
-  format_check:
-    name: Format Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          sudo apt install libopenmpi-dev
-          pip install -r requirements.txt
-      - name: Run Black
-        run: black --check src/
-
-  type_check:
-    name: Type Check
+  full_check:
+    name: Full Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -37,7 +20,9 @@ jobs:
           python3 -m pip install types-Deprecated
           pip install -r requirements.txt
           pip install lxml
-      - name: Run mypy
+      - name: Format Check
+        run: black --check src/
+      - name: Type Check
         run: |
           mkdir -p reports/mypy
           mypy src --html-report ../reports/mypy
@@ -46,39 +31,9 @@ jobs:
         with:
           name: mypy-report
           path: reports/mypy
-
-  codestyle_check:
-    name: Code Style Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          sudo apt install libopenmpi-dev
-          pip install -r requirements.txt
-      - name: Run pylint
+      - name: Code Style Check
         run: pylint src
-
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          sudo apt install libopenmpi-dev
-          pip install -r requirements.txt
-      - name: Run tests with coverage
+      - name: Test
         run: |
           mkdir -p reports/pytest/html reports/pytest/xml
           pytest --cov=src --cov-config=setup.cfg --cov-branch --cov-report=html:reports/pytest/html --cov-report=xml:reports/pytest/xml/coverage.xml --cov-report=term test | tee pytest_output.txt
