--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ black==24.8.0
 mypy==1.13.0
 pylint==3.3.0
 astroid==3.3.5
+requests==2.32.3
 types-requests==2.31.0
 mpi4py==4.0.1
 Deprecated==1.2.15
