Selection Configuration + Testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ output = reports/pytest/xml/coverage.xml
 [coverage:run]
 omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
-disable = W0511, E0401, E0203, W0201, E0611, R0801
+disable = W0511
 max-positional-arguments = 9
 max-line-length = 120
 max-args = 9
