--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ output = reports/pytest/xml/coverage.xml
 omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
 disable = W0511
+min-public-methods=1
 max-positional-arguments = 9
 max-line-length = 120
 max-args = 9
