--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ scikit-learn==1.5.2
 scipy==1.14.1
 six==1.16.0
 threadpoolctl==3.5.0
+black==24.8.0
+mypy==1.13.0
+pylint==3.3.0
+astroid==3.3.5
+requests==2.32.3
+types-requests==2.31.0
+mpi4py==4.0.1
