--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,11 @@ min-public-methods = 1
 max-positional-arguments = 11
 max-line-length = 120
 max-args = 11
-max-attributes = 15
+max-attributes = 16
 min-similarity-lines = 7
 extension-pkg-allow-list=mpi4py.MPI
 max-branches=16
+max-locals = 16
 [mypy]
 warn_unused_configs = True
 disallow_subclassing_any = True
