--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,9 @@ max-args = 11
 max-attributes = 16
 min-similarity-lines = 7
 extension-pkg-allow-list=mpi4py.MPI
-max-branches=16
-max-locals = 16
+max-branches = 18
+max-locals = 20
+max-statements = 55
 [mypy]
 warn_unused_configs = True
 disallow_subclassing_any = True
