--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ output = reports/pytest/xml/coverage.xml
 [coverage:run]
 omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
-disable = W0511
+disable = W0511, C0412, C0413
 min-public-methods = 1
 max-positional-arguments = 11
 max-line-length = 120
