GA Parallelization + Consistency

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,8 @@ max-args = 11
 max-attributes = 16
 min-similarity-lines = 7
 extension-pkg-allow-list=mpi4py.MPI
-max-branches = 18
+max-branches = 27
+max-nested-blocks = 6
 max-locals = 20
 max-statements = 55
 [mypy]
