--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt install libopenmpi-dev
+          sudo apt -y install gpaw
           pip install -r requirements.txt
       - name: Format Check
         run: |
