--- a/setup.cfg
+++ b/setup.cfg
@@ -7,10 +7,11 @@ omit = **/__init__.py
 [pylint.'MESSAGES CONTROL']
 disable = W0511, C0412, C0413
 min-public-methods = 1
+max-public-methods = 21
 max-positional-arguments = 11
 max-line-length = 120
 max-args = 11
-max-attributes = 18
+max-attributes = 19
 min-similarity-lines = 7
 extension-pkg-allow-list=mpi4py.MPI
 max-branches = 27
